--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -273,6 +273,7 @@ header .head-side {
     font-size:20px;
     margin-bottom:5px;
 }
+
 .profile-info-name-text a {
     color:#000;
     text-decoration: none;
@@ -291,6 +292,10 @@ header .head-side {
 .profile-info-item {
     text-align: center;
 }
+.profile-info-item a{
+    text-decoration: none;
+}
+
 .profile-info-item-n {
     font-weight: bold;
     font-size:20px;
@@ -436,6 +441,44 @@ header .head-side {
     padding: 3px;
     padding-left: 8px;
     color: #fff;
+}
+
+.search-term{
+    color: #477dbb;
+    font-size: 15px;
+
+}
+
+.estilo-lista{
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.config-form label{
+    display: block;
+    margin: 20px 0px;
+}
+
+.config-form label input{
+    border: 0px;
+    height: 25px;
+    border-radius: 2px;
+}
+
+.btn-submit{
+    padding: 2px 8px;
+    background-color: #477dbb;
+    color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}   
+
+.btn-submit:hover{
+    background-color: #819db9;
+}
+
+.config-form input:focus{
+    outline: 1px solid #aaa;
 }
 
 @media (max-width: 992px) {
